Fix page height on Firefox

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,7 @@
+body, html {
+  height: 100%;
+}
+
 body, html, .editor textarea {
   background: rgba(255,255,255,.8);
 }
